automatically close message boxes

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="close" class="modal">
+  <div id="modal" class="modal">
     <div class="modal__popup">
       <h2><%= t('.validation_failed') %></h2>
       <span class="modal__popup__close">&times;</span>
