--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, value| %>
-  <div id="close" class=<%= "#{type}" %>>
+  <div id="modal" class=<%= "#{type}" %>>
     <% if value.kind_of?(Array) %>
       <ul>
         <% value.each do |message| %>
