--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -25,17 +25,18 @@
 }
 
 .remember {
-  margin: 10px 0;
+  width: 30%;
+  margin: 7px 5px 0;
   display: flex;
+  align-items: center;
+  justify-content: space-around;
 
   &__checkbox {
     height: 15px;
-    width: 12px;
-    margin: 0 8px;
-    cursor: pointer;
+    width: 15px;
   }
 
-  &__input {
-    font-size: 0.8rem;
+  &__label {
+    font-size: 0.9em;
   }
 }
