--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -1,6 +1,7 @@
 @import
   url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap'),
-  url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+  url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap'),
+  url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,200&display=swap');
 
 .legend {
   width: 100%;
