--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,7 +1,7 @@
 .submit-btn {
   height: 40px;
   width: 100%;
-  margin: 18px 0 18px;
+  margin: 18px 0;
   font: $roboto-font-stack;
   font-size: 15px;
   background-color: $ice;
