--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,8 @@
 <% if object.errors.any? %>
   <div id="modal" class="modal">
-    <div class="modal__popup">
+    <div class="modal__wrapper">
       <h2><%= t('.validation_failed') %></h2>
-      <span class="modal__popup__close">&times;</span>
+      <span class="modal__close">&times;</span>
       <div>
         <ul>
           <% object.errors.full_messages.each do |message| %>
