--- a/app/assets/stylesheets/components/_message_boxes.scss
+++ b/app/assets/stylesheets/components/_message_boxes.scss
@@ -1,7 +1,7 @@
 .modal {
   height: 100vh;
   width:  100vw;
-  position: absolute;
+  position: fixed;
   @include center-it;
   background-color: $bg-modal;
 
