add card, list, table new UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,10 +17,11 @@
 
 @import
   "components/buttons",
-  "components/message_boxes",
-  "components/tables",
+  "components/cards",
+  "components/checkboxes",
   "components/list",
-  "components/cards";
+  "components/message_boxes",
+  "components/tables";
 
 @import
   "vendors/normalize",
