--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <%= render 'shared/totally_useless_header' %>
         <%= render 'shared/navbar' %>
       <% end %>
-      <div class="chart">
+      <div class="main">
         <%= render 'shared/flash_messages' %>
         <%= yield %>
       </div>
