--- a/app/assets/stylesheets/partials/_navbar.scss
+++ b/app/assets/stylesheets/partials/_navbar.scss
@@ -1,92 +1,83 @@
 .navbar {
-  grid-area: nav;
-  padding-bottom: 8px;
-  transition: width $fast ease;
+  grid-area: navbar;
+  padding: 20px 10px 2px;
+  transition: all $fast ease;
   background-color: $dark-gray;
   box-shadow: 3px 0 2px -1px $light-gray;
   z-index: 20;
 
   &__list {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    list-style: none;
+  }
 
-    &__item {
-      width: 100%;
-      font-family: $poppins-font-stack;
+  &__list-item {
+    height: 3rem;
+    width: 100%;
+    font-family: $poppins-font-stack;
+    &:nth-last-child(2) { margin-top: auto; }
 
-      &:first-child { margin-top: 20px; }
-      &:nth-last-child(2) { margin-top: auto; }
-      &:last-child {
-        margin: 7px 0 0;
-        font-size: 50%;
-        text-align: center;
-        white-space: nowrap;
-        transition: $fast;
+    &:last-child {
+      height: 1rem;
+      font-size: 50%;
+      text-align: center;
+      white-space: nowrap;
+      transition: $fast;
 
-        &:hover {
-          color: rgba($color: $yellow, $alpha: .5);
-        }
-      }
-
-      &__link {
-        height: 32px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &__svg {
-          width: 24px;
-          margin-right: 7px;
-          color: $light-gray;
-          transition: $fast;
-        }
-
-        &__text {
-          font-size: 1.6ch;
-          color: $gray;
-          transition: $slow;
-        }
-
-        &:hover & {
-          &__text,
-          &__svg { color: $ice; }
-        }
+      &:hover {
+        color: $ice;
       }
     }
+
   }
-}
 
-@media (max-width: 991px) {
-  .navbar {
+  &__item-link {
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    &__list {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      background: $dark-gray;
+    &:hover {
+      .navbar__link-svg,
+      .navbar__link-text { color: $light-gray; }
+    }
+  }
 
-      &__item {
+  &__link-svg {
+    min-width: 1.9rem;
+    width: 1.9rem;
+    margin-right: 7px;
+    color: $gray;
+    transition: $slow;
+  }
+
+  &__link-text {
+    font-size: .85em;
+    font-weight: bold;
+    color: $dark-gray;
+    transition: $lazy;
+  }
+
+  @include mq(lg) {
+    .navbar {
+      padding: 0;
+
+      &__list {
+        height: 100%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+  
+      &__list-item {
         &:nth-child(1) { margin: 0; }
-        &:nth-last-child(2) { margin: auto; }
-
-        &__link {
-          &__text {
-            display: none;
-          }
-
-          &:hover & {
-
-            &__text {
-              display: none;
-            }
-          }
-        }
-
-        &:last-child {
-          display: none;
-        }
+        &:nth-last-child(2) { margin: 0; }
+        &:last-child { display: none; }
+      }
+  
+      &__link-text {
+        display: none;
       }
     }
   }
