--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,43 @@
 <div class="form">
-  <h1 class="legend"><%= t('.legend') %></h1>
+  <h1 class="form__legend"><%= t('.legend') %></h1>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render 'shared/error_messages', object: resource %>
-    <div class="form__group">
+    <div class="form__field">
       <%= f.text_field :first_name,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.name'),
-                        class: 'form__group__input' %>
+                        class: 'form__input' %>
     </div>
-    <div class="form__group">
+    <div class="form__field">
       <%= f.text_field :last_name,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.last_name'),
-                        class: 'form__group__input' %>
+                        class: 'form__input' %>
     </div>
-    <div class="form__group">
+    <div class="form__field">
       <%= f.email_field :email,
                         autofocus: true,
                         autocomplete: 'on',
                         placeholder: t('.email'),
-                        class: 'form__group__input' %>
+                        class: 'form__input' %>
     </div>
-    <div class="form__group">
+    <div class="form__field">
       <%= f.password_field :password,
                             autocomplete: 'off',
                             placeholder: t('.password'),
-                            class: 'form__group__input' %>
+                            class: 'form__input' %>
     </div>
-    <div class="form__group">
+    <div class="form__field">
       <%= f.password_field :password_confirmation,
                             autocomplete: 'off',
                             placeholder: t('.password_confirmation'),
-                            class: 'form__group__input' %>
-    </div>  
-    <div>
-      <%= f.submit t('.signup'), class: 'submit-btn' %>
+                            class: 'form__input' %>
     </div>
-    <%= link_to t('.back'), new_user_session_path, class: 'nav-btn' %>
+    <div class="form__field">
+      <%= f.submit t('.signup'), class: 'btn btn--submit' %>
+      <%= link_to t('.back'), new_user_session_path, class: 'btn btn--link' %>
+    </div>
   <% end %>
 </div>
