--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,18 @@
 <nav class="navbar">
   <ul class="navbar__list">
-    <li class="navbar__list__item">
-      <%= link_to new_client_path, class:'navbar__list__item__link' do %>
+    <li class="navbar__list-item">
+      <%= link_to new_client_path, class:'navbar__item-link' do %>
         <%= load_svg('add-new-customer.svg') %>
-        <span class="navbar__list__item__link__text"><%= t('.new_contact') %></span>
+        <span class="navbar__link-text"><%= t('.new_contact') %></span>
       <% end %>
     </li>
-    <li class="navbar__list__item">
-      <%= link_to destroy_user_session_path, class:'navbar__list__item__link', method: :delete do %>
+    <li class="navbar__list-item">
+      <%= link_to destroy_user_session_path, class: 'navbar__item-link', method: :delete do %>
         <%= load_svg('logout.svg') %>
-        <span class="navbar__list__item__link__text"><%= t('.sign_out') %></span>
+        <span class="navbar__link-text"><%= t('.sign_out') %></span>
       <% end %>
     </li>
-    <li class="navbar__list__item">
+    <li class="navbar__list-item">
       <a href="https://github.com/mploureno" target="_blank">
         <span>powered by cleito &#169;</span>
       </a>
