--- a/app/assets/stylesheets/components/_message_boxes.scss
+++ b/app/assets/stylesheets/components/_message_boxes.scss
@@ -1,27 +1,37 @@
-.modal {
-  height: 100vh;
-  width:  100vw;
+.modal-container {
+  height: 1000vh;
+  width:  1000vw;
   position: fixed;
   @include center-it;
   background-color: $bg-modal;
+}
 
-  &__wrapper {
-    width: 20rem;
-    padding: 30px;
-    position: fixed;
-    @include center-it;
-    background: $ice;
-    border-radius: 5px;
-    border: none;
-    transition: $fast;
-    z-index: 20;
-    box-shadow: 4px 4px 40px $light-gray;
+.modal-box {
+  width: 36vw;
+  padding: 30px;
+  position: fixed;
+  @include center-it;
+  background: $ice;
+  letter-spacing: 0.05ch;
+  border-radius: 5px;
+  border: none;
+  transition: $fast;
+  z-index: 20;
+  text-shadow: .5px .5px 2px $light-gray;
+  box-shadow: 4px 4px 40px $light-gray;
 
-    &:hover {
-      box-shadow: 1px 2px 40px $light-gray,
-      1px 2px 10px $light-gray,
-      1px 1px 40px $dark-gray;
-    }
+  &:hover {
+    box-shadow: 1px 2px 40px $light-gray,
+                1px 2px 10px $light-gray,
+                1px 1px 40px $dark-gray;
+  }
+
+  @include mq(lg) {
+    width: 55vw;
+  }
+
+  @include mq(sm) {
+    width: 75vw;
   }
 
   &__close {
@@ -30,7 +40,6 @@
     right: 20px;
     transition: all $fast;
     font-size: 40px;
-    font-weight: bold;
     color: $gray;
     cursor: pointer;
 
@@ -40,23 +49,24 @@
   }
 }
 
-.alert {
-  position: absolute;
+.flash {
+  position: fixed;
   right: 50%;
   transform: (translateX(50%));
   transition: $slow;
-  font-weight: bold;
-  font-size: 1.3em;
-  color: $red;
-}
 
-.notice {
-  margin-top: 16px;
-  position: absolute;
-  right: 50%;
-  transform: (translateX(50%));
-  transition: $slow;
-  font-size: 1.3rem;
-  color: $dark-yellow;
-}
+  @include mq(sm) { font-size: .88em !important;}
 
+  &--alert {
+    font-size: 1.3em;
+    color: $red;
+    text-shadow: .5px .5px 1px $light-gray;
+  }
+
+  &--notice {
+    margin-top: 15px;
+    font-size: 1.1em;
+    color: $green;
+    text-shadow: .5px .5px 1px $light-gray;
+  }
+}
