--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -1,43 +1,79 @@
 .form {
   position: fixed;
   @include center-it;
-  width: 420px;
-  padding: 1rem;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 2rem;
 
-  &__group {
-    margin-bottom: 5px;
+  @include mq(xl) {
+    width: 60%;
+  }
 
-    &__input {
-      height: 40px;
-      width: 100%;
-      font: 100% $ubuntu-font-stack;
-      font-size: 14px;
-      text-align: center;  
-      background-color: $ice;
-      border-radius: 5px;
-      border: none;
-      outline: none;
+  @include mq(lg) {
+    width: 70%;
+  }
+
+  @include mq(md) {
+    width: 100%;
+    padding: 4rem;
+  }
+
+  @include mq(sm) {
+    padding: 1rem;
+    font-size: 0.8em !important;
+  }
+
+  &__legend {
+    width: 100%;
+    color: $dark-gray;
+    font-size: 3.6em;
+    text-align: center;
+    white-space: nowrap;
+    text-shadow: 2px 2px 5px $light-gray;
+
+    @include mq(xl) {
+      font-size: 3.5rem;
     }
-  
-    &__label {
-      font-size: 14px;
+
+    @include mq(md) {
+      font-size: 3.4rem;
+    }
+
+    @include mq(sm) {
+      font-size: 3rem;
     }
   }
-}
 
-.remember {
-  width: 30%;
-  margin: 7px 5px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  &__field {
+    margin-bottom: 0.4rem;
 
-  &__checkbox {
-    height: 15px;
-    width: 15px;
+    @include mq(sm) {
+      margin-bottom: 0.15rem;
+    }
+  }
+
+  &__input {
+    height: 40px;
+    width: 100%;
+    font: 100% $ubuntu-font-stack;
+    font-size: 1em;
+    text-align: center;  
+    background-color: $ice;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+
+    @include mq(md) {
+      font-size: 0.9em !important;
+    }
+
+    @include mq(sm) {
+      height: 40px;
+    }
   }
 
   &__label {
-    font-size: 0.9em;
+    font-size: 1em;
   }
 }
