--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,23 +1,4 @@
-<div class="list-container">
-  <% @clients.each do |client| %>
-    <%= link_to client_path(client) do %>
-      <ul class="list">
-        <li class="list__item">
-          <%= "#{client.first_name} #{client.last_name}" %>
-          <span class="list__detail">
-            <%= "#{client.email}" %>
-          </span>
-          <span class="list__detail">
-            <%= "last updated #{client.updated_at}" %>
-          </span>
-        </li>
-      </ul>
-    <% end %>
-  <% end %>
-</div>
-
 <div class="table-wrapper">
-<% if current_user.clients.exists? %>
   <table>
     <thead>
       <tr>
@@ -28,28 +9,55 @@
       </tr>
     </thead>
     <tbody>
-    <% @clients.each do |client| %>
       <tr class="table-row">
+      <% unless current_user.clients.exists? %>
+        <%= link_to new_client_path, class: 'btn--tab' do %>
+          <i class="fa fa-user-plus" aria-hidden="true"></i>
+          <%= t('.empty') %>
+        <% end %>
+      <% end %>
+
+      <% @clients.each do |client| %>
         <td><%= "#{client.first_name} #{client.last_name}" %></td>
         <td><%= "#{client.email}" %></td>
         <td><%= "#{client.mobile_phone}" %></td>
         <td>
-          <%= link_to edit_client_path(client), class: 'btn--link'  do %>
-            <span><%= t('.edit') %></span>
-            <i class="fas fa-pencil-alt" aria-hidden="true"></i>
-          <% end %>
-          <%= link_to client_path(client), class: 'btn--link', method: :delete, data: { confirm: t('.confirmation') } do %>
-            <span><%= t('.delete') %></span>
-            <i class="fas fa-trash" aria-hidden="true"></i>
-          <% end %>
+        <%= link_to edit_client_path(client), class: 'btn--link'  do %>
+          <span><%= t('.edit') %></span>
+          <i class="fas fa-pencil-alt" aria-hidden="true"></i>
+        <% end %>
+        <%= link_to client_path(client), class: 'btn--link', method: :delete, data: { confirm: t('.confirmation') } do %>
+          <span><%= t('.delete') %></span>
+          <i class="fas fa-trash" aria-hidden="true"></i>
+        <% end %>
         </td>
+      <% end %>
       </tr>
-    <% end %>
     </tbody>
   </table>
-<% else %>
-  <p class="empty">
+</div>
+
+<div class="list-container">
+<% unless current_user.clients.exists? %>
+  <%= link_to new_client_path, class: 'btn btn--tab' do %>
+    <i class="fa fa-user-plus" aria-hidden="true"></i>
     <%= t('.empty') %>
-  </p>
+  <% end %>
+<% end %>
+
+<% @clients.each do |client| %>
+  <%= link_to client_path(client) do %>
+    <ul class="list">
+      <li class="list__item">
+        <%= "#{client.first_name} #{client.last_name}" %>
+        <span class="list__detail">
+          <%= "#{client.email}" %>
+        </span>
+        <span class="list__detail">
+          <%= "last updated #{client.updated_at}" %>
+        </span>
+      </li>
+    </ul>
+  <% end %>
 <% end %>
 </div>
