--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -16,8 +16,9 @@
           <%= t('.empty') %>
         <% end %>
       <% end %>
-
+      </tr>
       <% @clients.each do |client| %>
+      <tr class="table-row">
         <td><%= "#{client.first_name} #{client.last_name}" %></td>
         <td><%= "#{client.email}" %></td>
         <td><%= "#{client.mobile_phone}" %></td>
@@ -31,8 +32,8 @@
           <i class="fas fa-trash" aria-hidden="true"></i>
         <% end %>
         </td>
-      <% end %>
       </tr>
+      <% end %>
     </tbody>
   </table>
 </div>
